-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b06
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8271900 | 17.0.2 | Christoph Langer | P4 | Resolved | Fixed | b01 |
| JDK-8272203 | 17.0.1 | Christoph Langer | P4 | Resolved | Fixed | b06 |
| JDK-8271729 | 15.0.5 | Sergey Nazarkin | P4 | Resolved | Fixed | b01 |
| JDK-8271728 | 13.0.9 | Sergey Nazarkin | P4 | Resolved | Fixed | b01 |
| JDK-8270542 | 11.0.13-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b03 |
| JDK-8271736 | 11.0.13 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
Line 2812:
// first time here. Set profile type.
__ str(tmp, mdo_addr);
[...]
Line 2843:
// first time here. Set profile type.
__ ldr(tmp, mdo_addr);
Shouldn't that "ldr" be a "str"?
- backported by
-
JDK-8270542 AARCH64: typo in LIR_Assembler::emit_profile_type
-
- Resolved
-
-
JDK-8271728 AARCH64: typo in LIR_Assembler::emit_profile_type
-
- Resolved
-
-
JDK-8271729 AARCH64: typo in LIR_Assembler::emit_profile_type
-
- Resolved
-
-
JDK-8271736 AARCH64: typo in LIR_Assembler::emit_profile_type
-
- Resolved
-
-
JDK-8271900 AARCH64: typo in LIR_Assembler::emit_profile_type
-
- Resolved
-
-
JDK-8272203 AARCH64: typo in LIR_Assembler::emit_profile_type
-
- Resolved
-
- relates to
-
JDK-8276832 riscv: typo in LIR_Assembler::check_no_conflict
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/815d3e1c
-
Commit
openjdk/jdk13u-dev/7a64454a
-
Commit
openjdk/jdk15u-dev/25760d13
-
Commit
openjdk/jdk17u/9175a8d2
-
Commit
openjdk/jdk/3d090e7e
-
Review
openjdk/jdk11u-dev/178
-
Review
openjdk/jdk13u-dev/248
-
Review
openjdk/jdk15u-dev/88
-
Review
openjdk/jdk17u/8
-
Review
openjdk/jdk/4686