8267625: AARCH64: typo in LIR_Assembler::emit_profile_type